test/integration/bad/data_index/rng_index1.stan
parameters {
  real y[3];

}
transformed parameters {
  real z[poisson_rng(10)];
}
